# encrypted-message-sender

./: .gitignore  Cargo.toml  implementation.md
.github/workflows/: rust.yml
migrations/: 20260521102510_initial_schema.sql  20260521141725_changing_password_hash_to_blob.sql  20260521151036_drop_nonce_from_users.sql
schemas/: chat.sql
src/: config.rs  extractors.rs  lib.rs  main.rs  tracing.rs
src/db/: mod.rs
src/routes/: helper.rs  login.rs  mod.rs  signup.rs
src/routes/chat/: mod.rs  new_chat.rs
src/routes/helper/: mod.rs
src/routes/structures/: mod.rs
